--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+abakit @ file:///home/eddyod/programming/abakit
 aicsimageio==4.9.2
 aicspylibczi==3.0.5
+aiobotocore==2.4.2
 aiohttp==3.7.4
+aioitertools==0.11.0
 aiosignal==1.2.0
 alabaster==0.7.12
 allensdk==2.15.1
@@ -25,6 +28,7 @@ beautifulsoup4==4.11.1
 bg-atlasapi==1.0.2
 bg-space==0.6.0
 bleach==5.0.1
+bokeh==2.4.3
 boto3==1.17.21
 botocore==1.20.112
 brainglobe-napari-io==0.1.5
@@ -56,7 +60,7 @@ crackle-codec==0.7.0
 crc32c==2.3
 cryptography==39.0.1
 cycler==0.11.0
-dask==2022.8.1
+dask==2023.10.0
 debugpy==1.6.3
 decorator==5.1.1
 deflate==0.3.0
@@ -64,6 +68,7 @@ defusedxml==0.7.1
 Deprecated==1.2.13
 dijkstra3d==1.12.0
 dill==0.3.5.1
+distributed==2023.10.0
 distro==1.8.0
 Django==4.2.5
 dnspython==2.2.1
@@ -107,17 +112,19 @@ grpc-google-iam-v1==0.12.4
 grpcio==1.47.0
 grpcio-status==1.47.0
 h5py==3.8.0
+hdf5plugin==4.2.0
 hdmf==3.4.7
 HeapDict==1.0.1
 hsluv==5.0.3
 httplib2==0.20.4
 idna==3.3
-igneous-pipeline==4.19.2
+igneous-pipeline==4.20.1
 imagecodecs==2022.8.8
 imageio==2.21.2
 imagesize==1.4.1
 imio==0.2.4
 imlib==0.1.3
+importlib-metadata==6.8.0
 in-n-out==0.1.8
 inflection==0.5.1
 iniconfig==1.1.1
@@ -208,6 +215,7 @@ numpy==1.23.3
 numpydoc==1.4.0
 oauth2client==4.1.3
 ome-types==0.3.0
+ome-zarr==0.8.2
 openai==0.27.7
 opencv-contrib-python==4.8.0.76
 opencv-python==4.6.0.66
@@ -295,6 +303,7 @@ rsa==4.9
 Rtree==1.0.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
+s3fs==2022.8.1
 s3transfer==0.3.7
 scikit-build==0.17.1
 scikit-image==0.19.3
@@ -314,6 +323,7 @@ six==1.16.0
 slurmio==0.0.6
 sniffio==1.3.0
 snowballstemmer==2.2.0
+sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
 Sphinx==4.5.0
 sphinx-rtd-theme==1.0.0
@@ -326,6 +336,7 @@ sphinxcontrib-serializinghtml==1.1.5
 SQLAlchemy==2.0.11
 sqlparse==0.4.3
 stack-data==0.5.0
+-e git+https://github.com/CBI-PITT/stack_to_multiscale_ngff.git@7615d0b77dd2cbd6a7f420ebb019eb187d7b9c2f#egg=stack_to_multiscale_ngff
 statsmodels==0.13.0
 superpose3d==1.4.1
 superqt==0.4.1
@@ -335,6 +346,7 @@ tables==3.7.0
 tabulate==0.9.0
 task-queue==2.12.0
 taskqueue==0.0.0
+tblib==3.0.0
 tenacity==8.0.1
 termcolor==2.2.0
 terminado==0.15.0
@@ -373,8 +385,11 @@ xxhash==3.3.0
 yacs==0.1.8
 yarl==1.8.1
 zarr==2.12.0
+zarr-stores @ git+https://github.com/CBI-PITT/zarr_stores.git@6660f84dd02ab7b3b9d0ffaac0c1e65ed9a446c7
 zfpc==0.1.2
 zfpy==1.0.0.post3
+zict==3.0.0
+zipp==3.17.0
 zmesh==1.4.2
 zope.event==4.5.0
 zope.interface==5.4.0
