--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 abakit @ file:///home/eddyod/programming/abakit
-aicsimageio==4.9.2
-aicspylibczi==3.0.5
-aiobotocore==2.4.2
-aiohttp==3.7.4
+absl-py==2.0.0
+affine==2.4.0
+aicsimageio==4.14.0
+aicspylibczi==3.1.2
+aiobotocore==2.5.4
+aiohttp==3.9.3
 aioitertools==0.11.0
 aiosignal==1.2.0
 alabaster==0.7.12
-allensdk==2.15.1
+antlr4-python3-runtime==4.9.3
 anyio==3.6.2
 app-model==0.1.4
 appdirs==1.4.4
@@ -17,20 +19,25 @@ arrow==1.2.3
 asciitree==0.3.3
 asgiref==3.6.0
 asttokens==2.0.8
+astunparse==1.6.3
 async-lru==2.0.2
-async-timeout==3.0.1
+async-timeout==4.0.3
 atomicwrites==1.4.1
-attrs==22.1.0
+attrs==23.2.0
 autopep8==1.7.0
 Babel==2.10.3
 backcall==0.2.0
 beautifulsoup4==4.11.1
+bfio==2.3.1
 bg-atlasapi==1.0.2
 bg-space==0.6.0
+black==23.12.1
 bleach==5.0.1
 bokeh==2.4.3
-boto3==1.17.21
-botocore==1.20.112
+boltons==21.0.0
+boto3==1.34.51
+botocore==1.31.17
+bounded-pool-executor==0.0.3
 brainglobe-napari-io==0.1.5
 brainreg==0.3.3
 brainreg-segment==0.2.16
@@ -40,35 +47,50 @@ bs4==0.0.1
 build==0.10.0
 cachetools==4.2.4
 cachey==0.2.1
+cattrs==23.2.3
 certifi==2022.6.15
+cf_xarray==0.9.0
 cffi==1.15.1
 chardet==3.0.4
 charset-normalizer==2.1.1
 click==8.1.3
-cloud-files==4.19.2
-cloud-volume==8.25.0
+click-plugins==1.1.1
+cligj==0.7.2
+cloud-files==4.24.0
+cloud-volume==8.32.0
 cloudpickle==2.1.0
+cluster_tools==0.14.15
+cmake==3.28.3
+colorama==0.4.6
 colorcet==3.0.1
 colorlog==6.7.0
+colour-science==0.4.4
 commonmark==0.9.1
+compress-pickle==2.1.0
 compressed-segmentation==2.2.0
 compresso==3.0.0
 configobj==5.0.6
 configparser==5.3.0
 connected-components-3d==3.10.2
-crackle-codec==0.7.0
+contourpy==1.2.1
+crackle-codec==0.13.0
 crc32c==2.3
 cryptography==39.0.1
 cycler==0.11.0
-dask==2023.10.0
+Cython==3.0.8
+dask==2024.4.2
+dask-expr==1.0.12
+dask-image==2023.8.1
+dataclasses==0.6
 debugpy==1.6.3
 decorator==5.1.1
 deflate==0.3.0
 defusedxml==0.7.1
 Deprecated==1.2.13
+detectron2 @ git+https://github.com/facebookresearch/detectron2.git@59d9fb1b5593bf2b581e8f5a091a15e4a19fbd8b
 dijkstra3d==1.12.0
 dill==0.3.5.1
-distributed==2023.10.0
+distributed==2024.4.2
 distro==1.8.0
 Django==4.2.5
 dnspython==2.2.1
@@ -76,59 +98,75 @@ docstring-parser==0.15
 docutils==0.17.1
 DracoPy==1.2.0
 edt==2.3.0
-elementpath==2.5.3
+elementpath==4.4.0
 email-validator==1.2.1
 entrypoints==0.4
+exceptiongroup==1.2.0
 executing==1.0.0
 fancylog==0.2.6
+fastcluster==1.2.6
 fasteners==0.17.3
 fastjsonschema==2.16.1
-fastremap==1.13.3
+fastremap==1.14.1
+filelock==3.13.1
 fill-voids==2.0.2
+fire==0.5.0
+flatbuffers==23.5.26
 fonttools==4.37.1
 fpzip==1.2.0
 fqdn==1.5.1
 freetype-py==2.3.0
 frozenlist==1.3.1
-fsspec==2022.8.1
+fsspec==2023.6.0
 future==0.18.2
 fvcore==0.1.5.post20221221
+gast==0.5.4
 gevent==23.9.1
 Glymur==0.8.19
 google==3.0.0
 google-api-core==2.8.2
 google-apitools==0.5.32
-google-auth==2.11.0
+google-auth==2.26.2
+google-auth-oauthlib==1.2.0
 google-cloud-appengine-logging==1.1.4
 google-cloud-audit-log==0.2.4
 google-cloud-core==2.3.2
 google-cloud-logging==3.2.2
 google-cloud-storage==2.5.0
 google-crc32c==1.3.0
+google-pasta==0.2.0
 google-resumable-media==2.3.3
 googleapis-common-protos==1.56.4
 greenlet==3.0.0
 grpc-google-iam-v1==0.12.4
-grpcio==1.47.0
+grpcio==1.60.0
 grpcio-status==1.47.0
+h11==0.14.0
 h5py==3.8.0
 hdf5plugin==4.2.0
 hdmf==3.4.7
 HeapDict==1.0.1
 hsluv==5.0.3
+httpcore==0.17.3
 httplib2==0.20.4
+httpx==0.24.1
+hydra-core==1.3.2
 idna==3.3
-igneous-pipeline==4.20.1
+igneous-pipeline==4.22.1
+image_processing @ git+https://github.com/bodleian/image-processing.git@b4ecceef8a4e345ebe005e245f117d1086def180
 imagecodecs==2022.8.8
-imageio==2.21.2
+imageio==2.34.0
+imageio-ffmpeg==0.4.9
 imagesize==1.4.1
+imantics==0.1.12
+imgaug==0.4.0
 imio==0.2.4
 imlib==0.1.3
 importlib-metadata==6.8.0
 in-n-out==0.1.8
 inflection==0.5.1
 iniconfig==1.1.1
-iopath==0.1.10
+iopath==0.1.9
 ipydatawidgets==4.3.2
 ipykernel==6.15.2
 ipympl==0.9.3
@@ -142,20 +180,29 @@ itk-elastix==0.17.1
 itk-filtering==5.3.0
 itk-io==5.3.0
 itk-meshtopolydata==0.10.0
+itk-montage==0.8.1
 itk-numerics==5.3.0
 itk-registration==5.3.0
 itk-segmentation==5.3.0
 itkwidgets==0.32.6
 jedi==0.18.1
+jgo==1.0.5
 Jinja2==3.1.2
 jmespath==0.10.0
+joblib==1.3.2
+jpylyzer==2.2.0
+JPype1==1.5.0
 json5==0.9.10
 jsonpointer==2.3
 jsonschema==4.17.3
 jupyter==1.0.0
 jupyter-console==6.4.4
+jupyter-contrib-core==0.4.2
+jupyter-contrib-nbextensions==0.7.0
 jupyter-events==0.6.3
-jupyter-lsp==2.1.0
+jupyter-highlight-selected-word==0.2.0
+jupyter-lsp==2.2.4
+jupyter-nbextensions-configurator==0.6.3
 jupyter_client==8.2.0
 jupyter_core==5.3.0
 jupyter_server==2.6.0
@@ -165,11 +212,16 @@ jupyterlab-pygments==0.2.2
 jupyterlab-widgets==1.1.4
 jupyterlab_server==2.22.1
 K3D==2.7.4
-kimimaro==3.2.1
+keras==2.15.0
+kimimaro==3.5.0
 kiwisolver==1.4.4
+kubernetes==27.2.0
+labelme2coco==0.2.4
 lazy_loader==0.3
+libclang==16.0.6
 locket==1.0.0
 loguru==0.6.0
+loxun==2.0
 luddite==1.0.2
 lxml==4.9.1
 magicgui==0.5.1
@@ -177,64 +229,89 @@ mapbuffer==0.7.1
 Markdown==3.4.1
 MarkupSafe==2.1.1
 marshmallow==3.19.0
-matplotlib==3.4.2
+matplotlib==3.8.4
 matplotlib-inline==0.1.6
 meshio==5.3.4
 micrometa==0.0.11
 mistune==2.0.4
+ml-dtypes==0.2.0
 morphapi==0.1.7
 MorphIO==3.3.3
 mpmath==1.3.0
+mrc==0.3.1
 msgpack==1.0.4
 multidict==6.0.2
 multiprocess==0.70.13
 multiprocessing-logging==0.3.3
+multiscale_spatial_image==1.0.0
+mypy-extensions==1.0.0
 myterial==1.2.1
 napari==0.4.18
 napari-console==0.0.6
 napari-ndtiffs==0.1.2
+napari-ome-zarr==0.5.2
 napari-plugin-engine==0.2.0
 napari-svg==0.1.10
-natsort==8.2.0
+natsort==6.2.1
 nbclassic==1.0.0
 nbclient==0.6.7
 nbconvert==7.0.0
 nbformat==5.4.0
+nd2==0.10.0
 ndx-events==0.2.0
 nest-asyncio==1.5.5
 networkx==2.8.6
 neuroglancer==2.30
 neurom==3.2.0
-nibabel==4.0.2
+nibabel==5.2.1
 notebook==6.4.12
 notebook_shim==0.2.3
 npe2==0.6.1
-numcodecs==0.10.2
-numexpr==2.8.3
+numcodecs==0.11.0
+numexpr==2.8.4
 numpy==1.23.3
 numpydoc==1.4.0
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.18.1
+nvidia-nvjitlink-cu12==12.3.101
+nvidia-nvtx-cu12==12.1.105
 oauth2client==4.1.3
-ome-types==0.3.0
+oauthlib==3.2.2
+ome-types==0.3.4
 ome-zarr==0.8.2
+omegaconf==2.3.0
 openai==0.27.7
 opencv-contrib-python==4.8.0.76
+opencv-contrib-python-headless==4.9.0.80
 opencv-python==4.6.0.66
+opt-einsum==3.3.0
 orjson==3.8.0
 overrides==7.3.1
-packaging==21.3
-pandas==1.4.4
+packaging==23.2
+pandas==1.5.3
 pandocfilters==1.5.0
 param==1.13.0
 parso==0.8.3
 partd==1.3.0
 pathos==0.2.9
+pathspec==0.12.1
 patsy==0.5.3
 pbr==5.10.0
 pep517==0.13.0
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==10.0.1
+Pillow==9.5.0
+PIMS==0.6.1
 Pint==0.19.2
+pixellib==0.7.1
 platformdirs==3.5.1
 plotly==5.13.1
 pluggy==1.0.0
@@ -243,18 +320,21 @@ portalocker==2.7.0
 posix-ipc==1.0.5
 pox==0.3.1
 ppft==1.7.6.5
+pqdm==0.2.0
 prometheus-client==0.14.1
 prompt-toolkit==3.0.30
 proto-plus==1.22.1
-protobuf==4.21.5
+protobuf==4.23.4
 psutil==5.9.1
 psycopg2-binary==2.9.6
 psygnal==0.3.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 py==1.11.0
+pyarrow==16.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pybboxes==0.1.6
 pybind11==2.11.1
 pycocotools==2.0.4
 pycodestyle==2.9.1
@@ -262,69 +342,88 @@ pycollada==0.7.2
 pycparser==2.21
 pyct==0.5.0
 pydantic==1.10.1
+pydantic-compat==0.1.2
+pydot==2.0.0
 pyflakes==2.5.0
 pyfqmr==0.1.2
 pyglet==2.0.9
 Pygments==2.13.0
 pyinspect==0.1.0
+pylibCZIrw==3.5.2
 PyMCubes==0.1.4
-PyMySQL==1.0.2
+PyMySQL==1.1.1
 pynrrd==0.4.3
 pynwb==2.2.0
 PyOpenGL==3.1.6
 pyOpenSSL==23.0.0
 pyparsing==3.0.9
+pyproj==3.6.1
 pyproject_hooks==1.0.0
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.13.0
 pyrsistent==0.18.1
 PySide2==5.15.2.1
 pysimdjson==5.0.1
 pyspng-seunglab==1.0.0
 pytest==7.1.2
 python-dateutil==2.8.2
+python-dotenv==0.19.2
 python-json-logger==2.0.7
 python-jsonschema-objects==0.4.1
 pytomlpp==1.0.11
 pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@8c8004853ac2d5b41d0f08693dfd67df3bf69976
 pytz==2022.2.1
+pyvips==2.2.3
 pyvista==0.40.0
 PyWavelets==1.3.0
 PyYAML==6.0
 pyzmq==25.1.0
 qtconsole==5.3.2
 QtPy==2.2.0
+rasterio==1.3.9
+rechunker==0.5.2
 requests==2.28.1
+requests-oauthlib==1.3.1
 requests-toolbelt==0.10.1
 resource-backed-dask-array==0.1.0
 retry==0.9.2
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-rich==12.5.1
+rich==10.16.2
 rsa==4.9
 Rtree==1.0.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
-s3fs==2022.8.1
-s3transfer==0.3.7
+s3fs==2023.6.0
+s3transfer==0.10.1
+sahi==0.11.15
 scikit-build==0.17.1
 scikit-image==0.19.3
-scipy==1.9.1
+scikit-learn==1.4.0
+scipy==1.13.0
 scooby==0.7.2
+scyjava==1.9.1
 seaborn==0.12.0
 semver==3.0.0
 Send2Trash==1.8.0
 shapely==2.0.1
 shard-computer==1.1.0
+shellingham==1.5.4
 shiboken2==5.15.2.1
 SimpleITK==2.2.1
 SimpleITK-SimpleElastix==2.0.0rc2.dev910
 simplejpeg==1.6.5
 simplejson==3.19.1
 six==1.16.0
+slicerator==1.1.0
 slurmio==0.0.6
 sniffio==1.3.0
 snowballstemmer==2.2.0
+snuggs==1.4.7
 sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
+spatial_image==1.0.0
 Sphinx==4.5.0
 sphinx-rtd-theme==1.0.0
 sphinxcontrib-applehelp==1.0.2
@@ -348,27 +447,38 @@ task-queue==2.12.0
 taskqueue==0.0.0
 tblib==3.0.0
 tenacity==8.0.1
+tensorboard==2.15.1
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0.post1
+tensorflow-estimator==2.15.0
+tensorflow-io-gcs-filesystem==0.35.0
 termcolor==2.2.0
 terminado==0.15.0
-tifffile==2022.8.12
+terminaltables==3.1.10
+threadpoolctl==3.2.0
+tifffile==2023.2.28
 tinybrain==1.3.1
 tinycss2==1.1.1
 toml==0.10.2
 tomli==2.0.1
 toolz==0.12.0
-torch==1.12.1
-torchvision==0.13.1
+torch==2.1.2
+torchvision==0.16.2
 tornado==6.2
-tqdm==4.64.0
+tqdm==4.66.4
 traitlets==5.6.0
 traittypes==0.2.1
 treelib==1.6.1
 trimesh==3.14.0
-typer==0.6.1
-typing_extensions==4.3.0
+triton==2.1.0
+typer==0.9.0
+typing_extensions==4.10.0
+tzdata==2024.1
+universal-pathlib==0.1.3
 uri-template==1.2.0
 urllib3==1.26.12
 urllib3-secure-extra==0.1.0
+valis-wsi==1.0.4
 vedo==2021.0.5
 vispy==0.12.2
 vtk==9.2.0rc2
@@ -376,16 +486,27 @@ wcwidth==0.2.5
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.5.2
+weightedstats==0.4.1
+Werkzeug==3.0.1
 widgetsnbextension==3.6.4
+wkw==1.1.22
 wrapt==1.14.1
 wslink==1.8.2
-xarray==2022.6.0
-xmlschema==1.11.3
+xarray==2023.12.0
+xarray-dataclasses==1.7.0
+xarray-datatree==0.0.14
+xgboost==2.0.3
+xmljson==0.2.1
+xmlschema==3.3.1
+xmltodict==0.13.0
+xs3d==1.2.0
+xsdata==24.3.1
 xxhash==3.3.0
 yacs==0.1.8
 yarl==1.8.1
-zarr==2.12.0
+zarr==2.15.0
 zarr-stores @ git+https://github.com/CBI-PITT/zarr_stores.git@6660f84dd02ab7b3b9d0ffaac0c1e65ed9a446c7
+zarrita==0.2.2
 zfpc==0.1.2
 zfpy==1.0.0.post3
 zict==3.0.0
@@ -393,4 +514,4 @@ zipp==3.17.0
 zmesh==1.4.2
 zope.event==4.5.0
 zope.interface==5.4.0
-zstandard==0.18.0
+zstandard==0.21.0
