--- a/src/pipeline/requirements.txt
+++ b/src/pipeline/requirements.txt
@@ -1,8 +1,9 @@
-aicsimageio==4.9.2
+aicsimageio==4.9.4
 aicspylibczi==3.0.5
 aiohttp==3.8.1
 aiosignal==1.2.0
 alabaster==0.7.12
+allensdk==2.16.2
 appdirs==1.4.4
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
@@ -35,10 +36,11 @@ chardet==5.0.0
 charset-normalizer==2.1.1
 click==8.1.3
 cloud-files==4.9.1
-cloud-volume==8.9.1
+cloud_volume==8.32.0
 cloudpickle==2.1.0
 commonmark==0.9.1
 compressed-segmentation==2.2.0
+compress_pickle==2.1.0
 compresso==3.0.0
 configobj==5.0.6
 configparser==5.3.0
@@ -46,7 +48,7 @@ connected-components-3d==3.10.2
 crc32c==2.3
 cryptography==37.0.4
 cycler==0.11.0
-dask==2022.8.1
+dask==2024.4.2
 debugpy==1.6.3
 decorator==5.1.1
 deflate==0.3.0
@@ -54,6 +56,7 @@ defusedxml==0.7.1
 Deprecated==1.2.13
 dijkstra3d==1.12.0
 dill==0.3.5.1
+distributed==2024.4.2
 dnspython==2.2.1
 docstring-parser==0.15
 docutils==0.19
@@ -91,11 +94,12 @@ greenlet==1.1.3
 grpc-google-iam-v1==0.12.4
 grpcio==1.47.0
 grpcio-status==1.47.0
+h5py==3.10.0
 HeapDict==1.0.1
 hsluv==5.0.3
 httplib2==0.20.4
 idna==3.3
-igneous-pipeline==4.6.0
+igneous_pipeline==4.22.1
 imagecodecs==2022.8.8
 imageio==2.21.2
 imagesize==1.4.1
@@ -108,6 +112,7 @@ ipykernel==6.15.2
 ipython==8.4.0
 ipython-genutils==0.2.0
 ipywidgets==8.0.1
+itk==5.4.0
 jedi==0.18.1
 Jinja2==3.1.2
 jmespath==1.0.1
@@ -122,6 +127,7 @@ jupyterlab-widgets==3.0.2
 K3D==2.7.4
 kimimaro==3.2.1
 kiwisolver==1.4.4
+lib==4.0.0
 locket==1.0.0
 loguru==0.6.0
 luddite==1.0.2
@@ -160,14 +166,16 @@ notebook==6.4.12
 npe2==0.6.1
 numcodecs==0.10.2
 numexpr==2.8.3
-numpy==1.23.2
+numpy==1.23.3
 numpydoc==1.4.0
 oauth2client==4.1.3
 ome-types==0.3.0
-opencv-python==4.6.0.66
+ome_zarr==0.8.3
+opencv_contrib_python==4.6.0.66
+opencv_python==4.6.0.66
 orjson==3.8.0
 packaging==21.3
-pandas==1.4.4
+pandas==2.2.2
 pandocfilters==1.5.0
 parso==0.8.3
 partd==1.3.0
@@ -176,8 +184,9 @@ pbr==5.10.0
 pep517==0.13.0
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.2.0
+Pillow==10.3.0
 Pint==0.19.2
+plotly==5.10.0
 pluggy==1.0.0
 posix-ipc==1.0.5
 pox==0.3.1
@@ -193,6 +202,7 @@ pure-eval==0.2.2
 py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycocotools==2.0.4
 pycodestyle==2.9.1
 pycparser==2.21
 pydantic==1.10.1
@@ -214,11 +224,13 @@ python-dateutil==2.8.2
 python-jsonschema-objects==0.4.1
 pytomlpp==1.0.11
 pytz==2022.2.1
+PyMCubes==0.1.4
 PyWavelets==1.3.0
 PyYAML==6.0
 pyzmq==23.2.1
 qtconsole==5.3.2
 QtPy==2.2.0
+rasterio==1.3.10
 requests==2.28.1
 resource-backed-dask-array==0.1.0
 retry==0.9.2
@@ -244,6 +256,8 @@ sphinxcontrib-htmlhelp==2.0.0
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
+Shapely==1.8.4
+SimpleITK==2.3.1
 SQLAlchemy==1.4.40
 stack-data==0.5.0
 superqt==0.3.5
@@ -252,14 +266,14 @@ task-queue==2.12.0
 taskqueue==0.0.0
 tenacity==8.0.1
 terminado==0.15.0
-tifffile==2022.8.12
+tifffile==2024.2.12
 tinybrain==1.3.1
 tinycss2==1.1.1
 toml==0.10.2
 tomli==2.0.1
 toolz==0.12.0
-torch==1.12.1
-torchvision==0.13.1
+torch==1.13.1
+torchvision==0.14.1
 tornado==6.2
 tqdm==4.64.0
 traitlets==5.3.0
@@ -270,7 +284,7 @@ typer==0.6.1
 typing_extensions==4.3.0
 urllib3==1.26.12
 urllib3-secure-extra==0.1.0
-vedo==2021.0.5
+vedo==2024.5.2
 vispy==0.10.0
 vtk==9.2.0rc2
 wcwidth==0.2.5
@@ -279,9 +293,11 @@ widgetsnbextension==4.0.2
 wrapt==1.14.1
 wslink==1.8.2
 xarray==2022.6.0
+xgboost==1.6.2
 xmlschema==1.11.3
 yarl==1.8.1
 zarr==2.12.0
+zarr_stores==0.1.dev25+g6660f84
 zfpc==0.1.2
 zfpy==1.0.0.post3
 zmesh==1.4.2
