--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,68 @@
-abakit @ file:///home/eddyod/programming/abakit
-aicsimageio==4.14.0
-aicspylibczi==3.1.2
-aiobotocore==2.5.4
-aiohttp==3.9.3
+absl-py==1.2.0
+aicsimageio==4.9.4
+aicspylibczi==3.0.5
+aiobotocore==2.13.1
+aiohttp==3.9.5
 aioitertools==0.11.0
-aiosignal==1.2.0
-alabaster==0.7.12
-allensdk==2.16.2
-anyio==3.6.2
-app-model==0.1.4
+aiosignal==1.3.1
+alabaster==0.7.16
+anndata==0.8.0
+annexremote==1.6.0
+app-model==0.2.8
 appdirs==1.4.4
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
 argschema==3.0.4
-arrow==1.2.3
 asciitree==0.3.3
-asgiref==3.6.0
+astor==0.8.1
 asttokens==2.0.8
-async-lru==2.0.2
+astunparse==1.6.3
 async-timeout==4.0.3
+atldld==0.3.4
 atomicwrites==1.4.1
 attrs==22.1.0
-autopep8==1.7.0
-Babel==2.10.3
+autopep8==2.0.0
+Babel==2.15.0
 backcall==0.2.0
+bcrypt==4.0.0
 beautifulsoup4==4.11.1
-bfio==2.3.0
 bg-atlasapi==1.0.2
 bg-space==0.6.0
+bids-validator==1.11.0
 bioformats-jar==2020.5.27
+black==22.8.0
 bleach==5.0.1
-bokeh==2.4.3
-boto3==1.34.51
-botocore==1.31.17
+blosc==1.11.2
+bokeh==3.4.3
+boto3==1.34.149
+botocore==1.34.149
 brainglobe-napari-io==0.1.5
-brainreg==0.3.3
+brainreg==0.4.0
+brainreg-napari==0.1.1
 brainreg-segment==0.2.16
-brainrender==2.0.5.3
+brainrender==2.0.5.5
 Brotli==1.0.9
 bs4==0.0.1
-build==0.10.0
+build==1.2.1
 cachetools==4.2.4
 cachey==0.2.1
 certifi==2022.6.15
 cffi==1.15.1
 chardet==3.0.4
 charset-normalizer==2.1.1
+ci-info==0.3.0
+citeproc-py==0.6.0
 click==8.1.3
 cloud-files==4.24.0
 cloud-volume==8.32.0
 cloudpickle==2.1.0
+cmocean==3.0.3
+codecov==2.1.12
+colorama==0.4.5
 colorcet==3.0.1
 colorlog==6.7.0
+colorspacious==1.1.2
+colour-science==0.4.1
 commonmark==0.9.1
 compress-pickle==2.1.0
 compressed-segmentation==2.2.0
@@ -59,13 +70,15 @@ compresso==3.0.0
 configobj==5.0.6
 configparser==5.3.0
 connected-components-3d==3.10.2
+contourpy==1.2.1
+coverage==4.5.4
 crackle-codec==0.13.0
 crc32c==2.3
 cryptography==39.0.1
 cycler==0.11.0
-czifile==2019.7.2
-dask==2023.5.0
-dask-image==2023.8.1
+Cython==0.29.32
+dask==2023.7.0
+dbscan==0.0.12
 debugpy==1.6.3
 decorator==5.1.1
 deflate==0.3.0
@@ -73,348 +86,450 @@ defusedxml==0.7.1
 Deprecated==1.2.13
 dijkstra3d==1.12.0
 dill==0.3.5.1
-distributed==2023.5.0
-distro==1.8.0
+distributed==2023.7.0
+distro==1.7.0
 dnspython==2.2.1
+docopt==0.6.2
 docstring-parser==0.15
-docutils==0.17.1
+docutils==0.20.1
 DracoPy==1.2.0
+duecredit==0.9.1
 edt==2.3.0
 elementpath==2.5.3
 email-validator==1.2.1
 entrypoints==0.4
-executing==1.0.0
+etelemetry==0.3.0
+executing==0.10.0
 fancylog==0.2.6
+fastcluster==1.2.6
 fasteners==0.17.3
 fastjsonschema==2.16.1
 fastremap==1.14.1
+filelock==3.8.0
 fill-voids==2.0.2
+fire==0.5.0
+flatbuffers==23.3.3
 fonttools==4.37.1
+formulaic==0.3.4
 fpzip==1.2.0
-fqdn==1.5.1
 freetype-py==2.3.0
-frozenlist==1.3.1
-fsspec==2023.6.0
-future==0.18.2
-fvcore==0.1.5.post20221221
-gevent==23.9.1
+frozenlist==1.3.3
+fsspec==2024.6.1
+fury==0.8.0
+future==0.18.3
+fuzzywuzzy==0.18.0
+gast==0.4.0
+gevent==21.12.0
+gitdb==4.0.9
+GitPython==3.1.27
+glasbey==0.2.1
 Glymur==0.8.19
 google==3.0.0
 google-api-core==2.8.2
 google-apitools==0.5.32
-google-auth==2.11.0
+google-auth==2.17.2
+google-auth-oauthlib==1.0.0
 google-cloud-appengine-logging==1.1.4
 google-cloud-audit-log==0.2.4
 google-cloud-core==2.3.2
 google-cloud-logging==3.2.2
 google-cloud-storage==2.5.0
 google-crc32c==1.3.0
+google-pasta==0.2.0
 google-resumable-media==2.3.3
 googleapis-common-protos==1.56.4
-greenlet==3.0.0
+greenlet==1.1.3
 grpc-google-iam-v1==0.12.4
-grpcio==1.47.0
+grpcio==1.53.0
 grpcio-status==1.47.0
-h5py==3.8.0
-hdf5plugin==4.2.0
-hdmf==3.4.7
+h5py==3.7.0
+hdf5plugin==4.4.0
+hdmf==3.14.2
 HeapDict==1.0.1
 hsluv==5.0.3
 httplib2==0.20.4
+humanize==4.3.0
 idna==3.3
 igneous-pipeline==4.22.1
+igraph==0.10.4
 imagecodecs==2022.8.8
-imageio==2.21.2
-imageio-ffmpeg==0.5.1
+imageio==2.21.1
 imagesize==1.4.1
 imio==0.2.4
 imlib==0.1.3
 importlib-metadata==6.8.0
-in-n-out==0.1.8
+in-n-out==0.1.6
 inflection==0.5.1
 iniconfig==1.1.1
-iopath==0.1.10
+interface-meta==1.3.0
+intern==1.4.1
+interpolation==2.2.2
+ipycanvas==0.13.1
 ipydatawidgets==4.3.2
-ipykernel==6.15.2
+ipyevents==2.0.1
+ipykernel==6.15.1
 ipympl==0.9.3
-ipython==8.4.0
+ipython==8.10.0
 ipython-genutils==0.2.0
+ipyvtklink==0.2.3
 ipywidgets==7.7.5
-isoduration==20.11.0
-itk==5.3.0
-itk-core==5.3.0
-itk-elastix==0.17.1
-itk-filtering==5.3.0
-itk-io==5.3.0
-itk-meshtopolydata==0.10.0
-itk-numerics==5.3.0
-itk-registration==5.3.0
-itk-segmentation==5.3.0
-itkwidgets==0.32.6
+iso8601==1.0.2
+isodate==0.6.1
+jaraco.classes==3.2.2
+jax==0.4.8
 jedi==0.18.1
-jgo==1.0.5
+jeepney==0.8.0
+jgo==1.0.4
 Jinja2==3.1.2
 jmespath==0.10.0
-JPype1==1.5.0
+joblib==1.2.0
+JPype1==1.4.0
 json5==0.9.10
-jsonpointer==2.3
-jsonschema==4.17.3
+jsonschema==4.14.0
 jupyter==1.0.0
 jupyter-console==6.4.4
-jupyter-contrib-core==0.4.2
-jupyter-contrib-nbextensions==0.7.0
-jupyter-events==0.6.3
-jupyter-highlight-selected-word==0.2.0
-jupyter-lsp==2.1.0
-jupyter-nbextensions-configurator==0.6.3
-jupyter_client==8.2.0
-jupyter_core==5.3.0
-jupyter_server==2.6.0
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.0
+jupyter-core==4.11.1
+jupyter_client==7.3.5
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==1.1.4
-jupyterlab_server==2.22.1
 K3D==2.7.4
+kaleido==0.2.1
+keras==2.12.0
+keyring==23.9.1
+keyrings.alt==4.2.0
 kimimaro==3.4.3
 kiwisolver==1.4.4
-lazy_loader==0.3
+lazy_loader==0.4
+leidenalg==0.9.1
+libclang==16.0.0
+linkify-it-py==2.0.2
+llvmlite==0.43.0
 locket==1.0.0
-loguru==0.6.0
+loguru==0.7.0
+looseversion==1.0.1
 luddite==1.0.2
 lxml==4.9.1
-magicgui==0.5.1
+magicgui==0.8.3
 mapbuffer==0.7.1
 Markdown==3.4.1
+markdown-it-py==3.0.0
 MarkupSafe==2.1.1
 marshmallow==3.19.0
-matplotlib==3.4.2
+matplotlib==3.9.1
 matplotlib-inline==0.1.6
+mdit-py-plugins==0.4.0
+mdurl==0.1.2
 meshio==5.3.4
 micrometa==0.0.11
+microviewer==1.7.1
 mistune==2.0.4
-morphapi==0.1.7
-MorphIO==3.3.3
-mpmath==1.3.0
-mrc==0.3.1
+ml-dtypes==0.0.4
+more-itertools==8.14.0
+morphapi==0.1.8
+MorphIO==3.3.4
+morphometrics @ git+https://github.com/kevinyamauchi/morphometrics.git@871fb232a2be3c7b137d707355d40d793b3e8cb6
+mpmath==1.2.1
 msgpack==1.0.4
-multidict==6.0.2
+multidict==6.0.3
 multiprocess==0.70.13
 multiprocessing-logging==0.3.3
+multiscale_spatial_image==1.0.0
+mypy-extensions==0.4.3
 myterial==1.2.1
-napari==0.4.18
-napari-aicsimageio==0.7.2
-napari-console==0.0.6
-napari-czifile2==0.2.7
+napari==0.5.1
+napari-bil-data-viewer==0.1.2
+napari-cell-centroid-annotator==0.0.1
+napari-console==0.0.9
+napari-layer-table==0.0.10
 napari-ndtiffs==0.1.2
 napari-ome-zarr==0.5.2
 napari-plugin-engine==0.2.0
-napari-svg==0.1.10
+napari-skimage-regionprops==0.10.0
+napari-svg==0.2.0
+napari-tools-menu==0.1.19
+napari-workflows==0.2.8
 natsort==8.2.0
-nbclassic==1.0.0
 nbclient==0.6.7
 nbconvert==7.0.0
 nbformat==5.4.0
-nd2==0.10.1
+nbsphinx==0.8.9
 ndx-events==0.2.0
 nest-asyncio==1.5.5
 networkx==2.8.6
-neuroglancer==2.30
-neurom==3.2.0
+neuroglancer==2.29
+neurom==3.2.2
 nibabel==4.0.2
+nilearn==0.9.2
+nipy==0.5.0
+nipype==1.8.4
+nitime==0.9
+nose2==0.15.1
 notebook==6.4.12
-notebook_shim==0.2.3
-npe2==0.6.1
+npe2==0.7.6
+num2words==0.5.12
+numba==0.60.0
 numcodecs==0.10.2
 numexpr==2.10.0
-numpy==1.23.3
+numpy==1.23.5
 numpydoc==1.4.0
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.5.82
+nvidia-nvtx-cu12==12.1.105
 oauth2client==4.1.3
-ome-types==0.5.1.post1
-ome-zarr==0.8.2
-openai==0.27.7
-opencv-contrib-python==4.8.0.76
+oauthlib==3.2.0
+ome-types==0.3.0
+ome-zarr==0.8.0
+openai==0.27.4
+opencv-contrib-python==4.6.0.66
 opencv-python==4.6.0.66
+opt-einsum==3.3.0
 orjson==3.8.0
-overrides==7.3.1
-packaging==21.3
+packaging==24.0
 pandas==2.2.2
 pandocfilters==1.5.0
-param==1.13.0
+panel==1.4.4
+param==2.1.1
+paramiko==2.11.0
 parso==0.8.3
 partd==1.3.0
+pathlib==1.0.1
 pathos==0.2.9
+pathspec==0.10.1
+patool==1.12
 patsy==0.5.3
 pbr==5.10.0
 pep517==0.13.0
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==10.0.1
-PIMS==0.6.1
+Pillow==9.2.0
 Pint==0.19.2
-platformdirs==3.5.1
-plotly==5.13.1
+pip-search==0.0.12
+pipdeptree==2.23.1
+platformdirs==2.5.2
+plotly==5.14.1
 pluggy==1.0.0
-pooch==1.7.0
-portalocker==2.7.0
+point-cloud-utils==0.29.6
+pooch==1.6.0
 posix-ipc==1.0.5
 pox==0.3.1
 ppft==1.7.6.5
 prometheus-client==0.14.1
 prompt-toolkit==3.0.30
-proto-plus==1.22.1
-protobuf==4.21.5
+proto-plus==1.22.0
+protobuf==4.22.1
+prov==2.0.0
 psutil==5.9.1
 psycopg2-binary==2.9.6
-psygnal==0.3.5
+psygnal==0.11.1
 ptyprocess==0.7.0
 pure-eval==0.2.2
 py==1.11.0
+py-cpuinfo==9.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pybind11==2.11.1
+pybids==0.16.0
+pybind11==2.2.4
+pyclesperanto-prototype==0.24.0
 pycocotools==2.0.4
 pycodestyle==2.9.1
 pycollada==0.7.2
+pyconify==0.1.6
 pycparser==2.21
 pyct==0.5.0
-pydantic==1.10.1
+pydantic==1.9.2
 pydantic-compat==0.1.2
+pydot==1.4.2
 pyflakes==2.5.0
 pyfqmr==0.1.2
-pyglet==2.0.9
-Pygments==2.13.0
+pyglet==2.0.3
+Pygments==2.18.0
 pyinspect==0.1.0
 PyMCubes==0.1.4
+pymeshfix==0.16.2
 PyMySQL==1.0.2
+PyNaCl==1.5.0
+pynndescent==0.5.8
 pynrrd==0.4.3
-pynwb==2.2.0
+pynwb==2.8.1
+pyopencl==2022.3.1
 PyOpenGL==3.1.6
 pyOpenSSL==23.0.0
 pyparsing==3.0.9
-pyproject_hooks==1.0.0
+pyproject_hooks==1.1.0
+PyQt5==5.15.7
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.11.0
+PyQt6==6.4.0
+PyQt6-Qt6==6.4.0
+PyQt6-sip==13.4.0
+pyqtgraph==0.13.2
+pyrasite==2.0
 pyrsistent==0.18.1
 PySide2==5.15.2.1
 pysimdjson==5.0.1
 pyspng-seunglab==1.0.0
 pytest==7.1.2
+pytest-cov==2.10.1
+pytest-env==0.6.2
+pytest-timeout==2.1.0
 python-dateutil==2.8.2
-python-json-logger==2.0.7
+python-gitlab==3.9.0
 python-jsonschema-objects==0.4.1
+pythreejs==2.4.2
 pytomlpp==1.0.11
-pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@8c8004853ac2d5b41d0f08693dfd67df3bf69976
+pytools==2022.1.14
 pytz==2022.2.1
-pyvista==0.40.0
+pyvips==2.2.1
+pyvista==0.38.5
+pyviz-comms==2.3.2
 PyWavelets==1.3.0
 PyYAML==6.0
-pyzmq==25.1.0
+pyzmq==23.2.1
 qtconsole==5.3.2
 QtPy==2.2.0
-readlif==0.6.5
-requests==2.28.1
-requests-toolbelt==0.10.1
+rdflib==6.2.0
+rechunker==0.5.2
+requests==2.32.3
+requests-oauthlib==1.3.1
+requests-toolbelt==0.9.1
 resource-backed-dask-array==0.1.0
 retry==0.9.2
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
 rich==12.5.1
 rsa==4.9
 Rtree==1.0.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
-s3fs==2023.6.0
-s3transfer==0.10.1
-scikit-build==0.17.1
+s3fs==2024.6.1
+s3transfer==0.10.2
+scanpy==1.9.3
+scikit-build==0.16.7
 scikit-image==0.19.3
-scipy==1.9.1
-scooby==0.7.2
-scyjava==1.10.0
+scikit-learn==1.1.2
+scipy==1.10.1
+scooby==0.7.1
+scyjava==1.5.1
 seaborn==0.12.0
+SecretStorage==3.3.3
 semver==3.0.0
 Send2Trash==1.8.0
-shapely==2.0.1
+session-info==1.0.0
+Shapely==1.8.4
 shard-computer==1.1.0
 shiboken2==5.15.2.1
-SimpleITK==2.2.1
+SimpleITK==2.2.0
 SimpleITK-SimpleElastix==2.0.0rc2.dev910
-simplejpeg==1.6.5
-simplejson==3.19.1
+simplejpeg==1.6.3
+simplejson==3.17.6
 six==1.16.0
-slicerator==1.1.0
 slurmio==0.0.6
-sniffio==1.3.0
+smmap==5.0.0
 snowballstemmer==2.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
-Sphinx==4.5.0
-sphinx-rtd-theme==1.0.0
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.0
+spatial_image==1.0.0
+Sphinx==7.4.7
+sphinx-argparse==0.3.1
+sphinx-rtd-theme==2.0.0
+sphinxcontrib-apidoc==0.3.0
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jquery==4.1
 sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
 SQLAlchemy==2.0.11
-sqlparse==0.4.3
 stack-data==0.5.0
-stack_to_multiscale_ngff @ file:///home/eddyod/programming/stack_to_multiscale_ngff
 statsmodels==0.13.0
+stdlib-list==0.8.0
 superpose3d==1.4.1
-superqt==0.4.1
-svg.path==6.3
-sympy==1.12
+superqt==0.6.7
+svg.path==6.2
+sympy==1.11.1
 tables==3.7.0
-tabulate==0.9.0
 task-queue==2.12.0
 taskqueue==0.0.0
 tblib==2.0.0
+Tempita==0.5.2
 tenacity==8.0.1
+tensorboard==2.12.1
+tensorboard-data-server==0.7.0
+tensorboard-plugin-wit==1.8.1
+tensorflow-estimator==2.12.0
+tensorflow-io-gcs-filesystem==0.32.0
 termcolor==2.2.0
 terminado==0.15.0
-tifffile==2022.4.8
-tinybrain==1.3.1
+texttable==1.6.7
+threadpoolctl==3.1.0
+tifffile==2022.8.12
+tinybrain==1.6.0
 tinycss2==1.1.1
 toml==0.10.2
 tomli==2.0.1
+tomli_w==1.0.0
 toolz==0.12.0
-torch==1.12.1
-torchvision==0.13.1
+torch==2.4.0
+torch-tb-profiler==0.4.0
+torchvision==0.19.0
 tornado==6.2
 tqdm==4.64.0
-traitlets==5.6.0
+traitlets==5.3.0
+traits==6.3.2
 traittypes==0.2.1
+transforms3d==0.4.1
 treelib==1.6.1
 trimesh==3.14.0
+triton==3.0.0
 typer==0.6.1
-typing_extensions==4.3.0
+typing_extensions==4.12.2
 tzdata==2024.1
-uri-template==1.2.0
+uc-micro-py==1.0.2
+ultralytics==8.0.145
+umap-learn==0.5.3
 urllib3==1.26.12
 urllib3-secure-extra==0.1.0
+valis-wsi==1.0.0rc12
 vedo==2021.0.5
-vispy==0.12.2
-vtk==9.2.0rc2
+vispy==0.14.3
+vtk==9.2.2
+vulture==2.6
 wcwidth==0.2.5
-webcolors==1.13
 webencodings==0.5.1
-websocket-client==1.5.2
+weightedstats==0.4.1
+Werkzeug==2.2.3
+Whoosh==2.7.4
 widgetsnbextension==3.6.4
 wrapt==1.14.1
-wslink==1.8.2
-xarray==2022.6.0
+wslink==1.9.3
+xarray==2024.6.0
+xarray-dataclasses==1.8.0
+xarray-datatree==0.0.14
 xgboost==2.0.3
 xmlschema==1.11.3
 xs3d==1.6.0
-xsdata==24.3.1
-xxhash==3.3.0
-yacs==0.1.8
-yarl==1.8.1
-zarr==2.15.0
-zarr-stores @ git+https://github.com/CBI-PITT/zarr_stores.git@6660f84dd02ab7b3b9d0ffaac0c1e65ed9a446c7
+xvfbwrapper==0.2.9
+xxhash==3.2.0
+xyzservices==2023.7.0
+yarl==1.8.2
+zarr==2.12.0
+zarr_stores @ git+https://github.com/CBI-PITT/zarr_stores.git@6660f84dd02ab7b3b9d0ffaac0c1e65ed9a446c7
 zfpc==0.1.2
 zfpy==1.0.0.post3
 zict==3.0.0
-zipp==3.17.0
+zipp==3.16.0
 zmesh==1.4.2
 zope.event==4.5.0
 zope.interface==5.4.0
