--- a/requirements.txt
+++ b/requirements.txt
@@ -157,15 +157,15 @@ greenlet==3.0.0
 grpc-google-iam-v1==0.12.4
 grpcio==1.60.0
 grpcio-status==1.47.0
-h11==0.14.0
+h11==0.16.0
 h5py==3.8.0
 hdf5plugin==4.2.0
 hdmf==4.0.0
 HeapDict==1.0.1
 hsluv==5.0.3
-httpcore==0.17.3
+httpcore==1.0.9
 httplib2==0.20.4
-httpx==0.24.1
+httpx==0.28.1
 hydra-core==1.3.2
 idna==3.3
 igneous_pipeline==4.28.3
@@ -213,7 +213,8 @@ jpylyzer==2.2.0
 JPype1==1.5.0
 json5==0.9.10
 jsonpointer==2.3
-jsonschema==4.17.3
+jsonschema==4.25.0
+jsonschema-specifications==2025.4.1
 jupyter==1.0.0
 jupyter-console==6.4.4
 jupyter-contrib-core==0.4.2
@@ -223,19 +224,20 @@ jupyter-highlight-selected-word==0.2.0
 jupyter-lsp==2.2.4
 jupyter-nbextensions-configurator==0.6.3
 jupyter_client==8.2.0
-jupyter_core==5.3.0
+jupyter_core==5.8.1
 jupyter_server==2.6.0
 jupyter_server_terminals==0.4.4
-jupyterlab==4.0.0
+jupyterlab==4.4.5
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==1.1.4
-jupyterlab_server==2.22.1
+jupyterlab_server==2.27.3
 K3D==2.7.4
 keras==3.9.0
 kimimaro==4.1.2
 kiwisolver==1.4.4
 kubernetes==27.2.0
 labelme2coco==0.2.4
+lark==1.2.2
 lazy_loader==0.4
 libclang==16.0.6
 linkify-it-py==2.0.3
@@ -300,7 +302,7 @@ notebook_shim==0.2.3
 npe2==0.7.7
 numba==0.61.0
 numcodecs==0.11.0
-numexpr==2.8.4
+numexpr==2.11.0
 numpy==1.26.4
 numpydoc==1.4.0
 nvidia-cublas-cu12==12.1.3.1
@@ -425,6 +427,7 @@ qtconsole==5.3.2
 QtPy==2.2.0
 rasterio==1.3.9
 rechunker==0.5.2
+referencing==0.36.2
 requests==2.32.3
 requests-oauthlib==1.3.1
 requests-toolbelt==0.10.1
@@ -432,7 +435,9 @@ resource-backed-dask-array==0.1.0
 retry==0.9.2
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rfc3987-syntax==1.1.0
 rich==10.16.2
+rpds-py==0.26.0
 rsa==4.9
 Rtree==1.0.1
 ruamel.yaml==0.17.21
@@ -534,7 +539,7 @@ vedo==2025.5.3
 vispy==0.14.3
 vtk==9.2.0rc2
 wcwidth==0.2.5
-webcolors==1.13
+webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.5.2
 weightedstats==0.4.1
